@@ -11,6 +11,7 @@ lib/Muldis/DB/Engine/Example/PhysType.pm
 lib/Muldis/DB/Language.pod
 lib/Muldis/DB/SeeAlso.pod
 lib/Muldis/DB/Validator.pm
+LICENSE/GPL
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
