@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Muldis-DB
-version:      0.0.0
+version:      0.0.1
 version_from: 
 installdirs:  site
 requires:
